--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
   <meta content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'
         name='viewport'>
   <meta content='ie=edge' http-equiv='X-UA-Compatible'>
-  <link href='assets/styles/styles.css' rel='stylesheet'>
   <link href='https://fonts.googleapis.com' rel='preconnect'>
   <link crossorigin href='https://fonts.gstatic.com' rel='preconnect'>
   <link href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'
@@ -14,6 +13,7 @@
   <script src='https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js'></script>
   <script defer src='https://cdn.jsdelivr.net/npm/img-comparison-slider@8/dist/index.js'></script>
   <link href='https://cdn.jsdelivr.net/npm/img-comparison-slider@8/dist/styles.css' rel='stylesheet' />
+  <link href='./styles/style.min.css' rel='stylesheet'>
   <title>Art Beauty</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
     <nav class='nav'>
       <div class='nav__logo'>
         <a href='index.html'>
-          <img alt='Art Beauty Logo' src='assets/images/logo.png'>
+          <img alt='Art Beauty Logo' src='images/logo.png'>
         </a>
       </div>
       <div class='nav__info'>
@@ -33,13 +33,13 @@
       </div>
       <div class='nav__social'>
         <a href='https://vk.com' target='_blank'>
-          <img alt='vk' src='assets/images/social/vk.svg'>
+          <img alt='vk' src='images/social/vk.svg'>
         </a>
         <a href='https://instagram.com' target='_blank'>
-          <img alt='instagram' src='assets/images/social/instagram.svg'>
+          <img alt='instagram' src='images/social/instagram.svg'>
         </a>
         <a href='https://whatsapp.com' target='_blank'>
-          <img alt='wa' src='assets/images/social/whatsapp.svg'>
+          <img alt='wa' src='images/social/whatsapp.svg'>
         </a>
       </div>
       <div class='nav__phone'>
@@ -58,14 +58,14 @@
         Позвольте себе выглядеть моложе на <span>5 лет</span>
       </p>
       <div class='appointment-btn callback'>
-        <img alt='' src='assets/images/appointment-btn/white/circle1.svg'>
-        <img alt='' src='assets/images/appointment-btn/white/circle2.svg'>
+        <img alt='' src='images/appointment-btn/white/circle1.svg'>
+        <img alt='' src='images/appointment-btn/white/circle2.svg'>
         <span></span>
         <button>Записаться</button>
       </div>
     </main>
     <div class='header__background'>
-      <img alt='marketing' class='header__background-text' src='./assets/images/circle-text.svg'>
+      <img alt='marketing' class='header__background-text' src='assetsmages/circle-text.svg'>
       <span class='header__background-img'></span>
     </div>
     <button class='sidebar-btn' id='sidebar-btn'></button>
@@ -73,8 +73,8 @@
 </header>
 <section class='problems'>
   <div class='problems__banner'>
-    <img alt='problems' class='problems__banner-img' src='assets/images/problems/problems-banner.png'>
-    <img alt='problems' class='problems__banner-text' src='assets/images/problems/problem-text.svg'>
+    <img alt='problems' class='problems__banner-img' src='images/problems/problems-banner.png'>
+    <img alt='problems' class='problems__banner-text' src='images/problems/problem-text.svg'>
     <div class='problems__banner-rectangle'></div>
   </div>
   <div class='problems__solution'>
@@ -84,40 +84,40 @@
     <div class='problems__solutions'>
       <ul>
         <li>
-          <img alt='solution1' src='assets/images/problems/problems-icon1.svg'>
+          <img alt='solution1' src='images/problems/problems-icon1.svg'>
           <span>Мелкие и глубокие морщины</span>
         </li>
         <li>
-          <img alt='solution2' src='assets/images/problems/problems-icon2.svg'>
+          <img alt='solution2' src='images/problems/problems-icon2.svg'>
           <span>Обвисание кожи и нечеткий овал</span>
         </li>
         <li>
-          <img alt='solution3' src='assets/images/problems/problems-icon3.svg'>
+          <img alt='solution3' src='images/problems/problems-icon3.svg'>
           <span>Носогубные складки</span>
         </li>
         <li>
-          <img alt='solution4' src='assets/images/problems/problems-icon4.svg'>
+          <img alt='solution4' src='images/problems/problems-icon4.svg'>
           <span>Наличие брылей и второго подбородка</span>
         </li>
         <li>
-          <img alt='solution5' src='assets/images/problems/problems-icon5.svg'>
+          <img alt='solution5' src='images/problems/problems-icon5.svg'>
           <span>Опущение кончиков губ и бровей</span>
         </li>
         <li>
-          <img alt='solution6' src='assets/images/problems/problems-icon6.svg'>
+          <img alt='solution6' src='images/problems/problems-icon6.svg'>
           <span>Ассиметрия лица</span>
         </li>
       </ul>
     </div>
     <div class='appointment-btn callback'>
-      <img alt='' src='assets/images/appointment-btn/dust/circle1.svg'>
-      <img alt='' src='assets/images/appointment-btn/dust/circle2.svg'>
+      <img alt='' src='images/appointment-btn/dust/circle1.svg'>
+      <img alt='' src='images/appointment-btn/dust/circle2.svg'>
       <span></span>
       <button>Записаться</button>
     </div>
   </div>
-  <img alt='background dots' class='background-dots' src='assets/images/bg-dots.svg'>
-  <img alt='line' class='problems__line' src='assets/images/problems/problems-line.svg'>
+  <img alt='background dots' class='background-dots' src='images/bg-dots.svg'>
+  <img alt='line' class='problems__line' src='images/problems/problems-line.svg'>
 </section>
 <section class='example'>
   <div class='example__wrapper'>
@@ -127,23 +127,23 @@
     <div class='example__features'>
       <ul>
         <li>
-          <img alt='clock' src='assets/images/example/feature-icons/clock.svg'>
+          <img alt='clock' src='images/example/feature-icons/clock.svg'>
           <h5>Скорость</h5>
           <p>Введение нитей редко длится более получаса, а потому уже вскоре вы получите заветный эффект.</p>
         </li>
         <li>
-          <img alt='surge' src='assets/images/example/feature-icons/surge.svg'>
+          <img alt='surge' src='images/example/feature-icons/surge.svg'>
           <h5>Не нужен наркоз</h5>
           <p>Достаточно местной анестезии, что существенно сокращает всевозможные риски, связанные с мощными
             анестетиками.</p>
         </li>
         <li>
-          <img alt='face' src='assets/images/example/feature-icons/face.svg'>
+          <img alt='face' src='images/example/feature-icons/face.svg'>
           <h5>Нет вредя для здоровья</h5>
           <p>Введение нитей абсолютно безопасно. Процедура не несет существенной нагрузки на организм.</p>
         </li>
         <li>
-          <img alt='eye' src='assets/images/example/feature-icons/eye.svg'>
+          <img alt='eye' src='images/example/feature-icons/eye.svg'>
           <h5>Быстрый эффект</h5>
           <p>Сразу после процедуры будут заметны изменения.</p>
         </li>
@@ -152,27 +152,27 @@
     <div class='example__slider-appointment'>
       <div class='example__slider'>
         <img-comparison-slider handle='true' keyboard='disabled'>
-          <img alt='before' slot='first' src='assets/images/example/before.png' />
-          <img alt='after' slot='second' src='assets/images/example/after.png' />
-          <img alt='' slot='handle' src='assets/images/example/divider.svg'>
+          <img alt='before' slot='first' src='images/example/before.png' />
+          <img alt='after' slot='second' src='images/example/after.png' />
+          <img alt='' slot='handle' src='images/example/divider.svg'>
         </img-comparison-slider>
-        <img alt='after' class='example__slider-after' src='assets/images/example/after-text.png'>
+        <img alt='after' class='example__slider-after' src='images/example/after-text.png'>
       </div>
       <div class='example__appointment'>
         <h2>Примеры</h2>
         <h3>работ </h3>
         <p>Устойчивый результат, гладкая кожа от <span>4х до 5 лет</span></p>
         <div class='appointment-btn callback'>
-          <img alt='' src='assets/images/appointment-btn/dust/circle1.svg'>
-          <img alt='' src='assets/images/appointment-btn/dust/circle2.svg'>
+          <img alt='' src='images/appointment-btn/dust/circle1.svg'>
+          <img alt='' src='images/appointment-btn/dust/circle2.svg'>
           <span></span>
           <button>Записаться</button>
         </div>
       </div>
     </div>
   </div>
-  <img alt='line' class='example__line' src='assets/images/example/example-line.png'>
-  <img alt='background-dots' class='example__background-dots' src='assets/images/bg-dots.svg'>
+  <img alt='line' class='example__line' src='images/example/example-line.png'>
+  <img alt='background-dots' class='example__background-dots' src='images/bg-dots.svg'>
 </section>
 <section class='procedure'>
   <div class='procedure__wrapper'>
@@ -193,7 +193,7 @@
     </form>
   </div>
   <div class='procedure__banner'>
-    <img alt='desc' src='assets/images/procedure-promo-desc.png'>
+    <img alt='desc' src='images/procedure-promo-desc.png'>
   </div>
 </section>
 <section class='clients'>
@@ -216,7 +216,7 @@
 <footer class='footer'>
   <div class='footer__wrapper'>
     <div class='footer__logo'>
-      <img alt='Art Beauty Logo' src='assets/images/logo.png'>
+      <img alt='Art Beauty Logo' src='images/logo.png'>
       <span>Нитевой лифтинг лица в Санкт-Петербурге</span>
     </div>
     <div class='footer__menu'>
@@ -247,13 +247,13 @@
         <h4>Соц сети:</h4>
         <ul>
           <li>
-            <a href='https://facebook.com'><img alt='Facebook' src='assets/images/footer/footer-fb.svg'></a>
+            <a href='https://facebook.com'><img alt='Facebook' src='images/footer/footer-fb.svg'></a>
           </li>
           <li>
-            <a href='https://vk.com'><img alt='VK' src='assets/images/footer/footer-vk.svg'></a>
+            <a href='https://vk.com'><img alt='VK' src='images/footer/footer-vk.svg'></a>
           </li>
           <li>
-            <a href='https://instagram.com'><img alt='Instagram' src='assets/images/footer/footer-insagram.svg'></a>
+            <a href='https://instagram.com'><img alt='Instagram' src='images/footer/footer-insagram.svg'></a>
           </li>
         </ul>
       </div>
@@ -307,21 +307,18 @@
     </div>
     <div class='sidenav__social'>
       <a href='https://vk.com' target='_blank'>
-        <img alt='vk' src='assets/images/social/vk.svg'>
+        <img alt='vk' src='images/social/vk.svg'>
       </a>
       <a href='https://instagram.com' target='_blank'>
-        <img alt='instagram' src='assets/images/social/instagram.svg'>
+        <img alt='instagram' src='images/social/instagram.svg'>
       </a>
       <a href='https://whatsapp.com' target='_blank'>
-        <img alt='wa' src='assets/images/social/whatsapp.svg'>
+        <img alt='wa' src='images/social/whatsapp.svg'>
       </a>
     </div>
     <span class='sidenav__copyright'>© 2020 ART Beauty</span>
   </div>
 </div>
-<script src='assets/scripts/swiperClientsConfig.js' type='module'></script>
-<script src='assets/scripts/forms.js' type='module'></script>
-<script src='assets/scripts/modal.js' type='module'></script>
-<script src='assets/scripts/sidenav.js' type='module'></script>
+<script src='./scripts/main.min.js' type='module'></script>
 </body>
 </html>
