--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <script src='https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js'></script>
   <script defer src='https://cdn.jsdelivr.net/npm/img-comparison-slider@8/dist/index.js'></script>
   <link href='https://cdn.jsdelivr.net/npm/img-comparison-slider@8/dist/styles.css' rel='stylesheet' />
-  <link href='./styles/style.min.css' rel='stylesheet'>
+  <link href='styles/style.min.css' rel='stylesheet'>
   <title>Art Beauty</title>
 </head>
 <body>
@@ -65,7 +65,7 @@
       </div>
     </main>
     <div class='header__background'>
-      <img alt='marketing' class='header__background-text' src='assetsmages/circle-text.svg'>
+      <img alt='marketing' class='header__background-text' src='images/circle-text.svg'>
       <span class='header__background-img'></span>
     </div>
     <button class='sidebar-btn' id='sidebar-btn'></button>
@@ -281,10 +281,10 @@
       <button class='close__modal' id='close-modal'>&#10005;</button>
     </div>
     <form class='appointment-form' id='appointment-form'>
-      <label for='promo-name'>
+      <label for='appointment-tel'>
         <input id='appointment-name' name='promo-name' placeholder='ВАШЕ ИМЯ' type='text'>
       </label>
-      <label for='promo-tel'>
+      <label for='appointment-tel'>
         <input id='appointment-tel' name='promo-tel' placeholder='ВАШЕ ТЕЛЕФОН' type='tel'>
       </label>
       <button class='submit-btn' type='submit'>записаться со скидкой</button>
@@ -319,6 +319,6 @@
     <span class='sidenav__copyright'>© 2020 ART Beauty</span>
   </div>
 </div>
-<script src='./scripts/main.min.js' type='module'></script>
+<script src='scripts/main.min.js' type='module'></script>
 </body>
 </html>
